# lammps_monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  phal-md-hpcx-diag.o2362706  phal-md-probe.o2362673  phal-md-probe.o2362677  phal-md-probe.o2362770  phal-md-probe.o2362773  phal-md-probe.o2362776  phal-train-probe.o2360507  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: allegro.yaml  cp2k.yaml  default.yaml  lammps.yaml
configs/: cp2k.yaml  default.yaml  lammps.yaml  runtime.yaml  train.yaml
container/: apptainer.def
containers/: .dockerignore  Dockerfile.base  Dockerfile.cp2k  Dockerfile.md  Dockerfile.md-probe  Dockerfile.train  Dockerfile.train-probe  README.md  build.sh  versions.yaml
containers/probes/md-probe/: README.md  data.h2  in.run0  in.run10
containers/scripts/: build_md_probe_model.py  patch_pair_nequip_allegro_lammps_10sep2025.py  validate_md_binary_static.py  validate_md_stack.py  validate_platform.py  validate_train_stack.py
docs/: api.md  architecture.md  config-reference.md  index.md  online-mode.md  performance.md
docs/adr/: 001-atom-wise-ood.md  002-block-spatial-grid.md  003-lj-linear-residual.md  004-distance-histogram-dedup.md
docs/container/: apptainer.md  architecture.md  docker.md  milestone2-train-probe.md  runtime.md
docs/container/evidence/: train-probe-base-image-manifest.json  train-probe-base-image-summary.json  train-probe-execution-status.json
docs/releases/: baseline.yaml  manifest.json  milestone3-baseline.md
examples/: 01_monitor_lammps_dump.py  02_extract_hotspots.py  03_generate_cp2k_inputs.py  04_parse_cp2k_forces.py  05_write_allegro_dataset.py  06_online_monitor.py  extract_hotspots.py  generate_cp2k_inputs.py  run_monitor.py
runtime/: README.md
scripts/: check_runtime.py  make_tiny_h2o_dataset.py  smoke_allegro.py  smoke_allegro_h2o_inference.py  train_tiny_allegro_h2o.py
scripts/pbs/: diagnose_md_probe_hpcx.pbs  validate_md_probe.pbs  validate_train_probe.pbs
src/hotspot_al/: __init__.py  cli.py  config.py  config_schema.py  exceptions.py  models.py  protocols.py
src/hotspot_al/active_learning/: __init__.py  candidate_pool.py  deduplication.py  scheduler.py  workflow.py
src/hotspot_al/backends/: __init__.py  allegro.py  allegro_inference.py  base.py  cp2k.py  factory.py  lammps.py  registry.py  schedulers.py
src/hotspot_al/buffer/: __init__.py  rolling_buffer.py
src/hotspot_al/cp2k/: __init__.py  cp2k_force_parser.py  cp2k_input.py  cp2k_runner.py  cp2k_task_submitter.py  (+1 more)
tests/: README.md  conftest.py  test_allegro_adapter.py  test_allegro_backend.py  test_cluster_extraction.py  test_cp2k_parser.py  test_lammps_reader.py
tests/architecture/: test_core_domain_boundaries.py
tests/e2e/: test_offline_active_learning_pipeline.py  test_online_pipeline.py
tests/fake_backends/: __init__.py  fake_allegro.py  fake_cp2k.py  fake_lammps.py
tests/integration/: test_allegro_h2o_inference_real.py  test_allegro_real.py  test_cp2k_real.py  test_lammps_real.py
tests/scripts/: benchmark_monitor.py  check_imports.py  run_all_offline.sh  run_integration_if_available.sh
tests/unit/: test_allegro_backend_contract.py  test_allegro_dataset.py  test_backend_registry.py  test_backend_skeletons.py  test_block_extraction.py  test_boundary_regions.py  test_candidate_pool.py  test_cluster_extraction.py  test_config_schema.py  test_container_milestone2.py  test_container_milestone3.py  test_cp2k_parser_input.py  test_cp2k_runner.py  test_cp2k_task_submitter.py  test_dataset_writer.py  test_deduplication.py  test_embedding.py  test_geometry_monitor.py  test_h_capping.py  test_hotspot_detection.py  test_lammps_controller.py  test_lammps_input_full.py  test_lammps_reader.py  test_mask_generator.py  test_model_registry.py  test_models_serialization.py  test_monitor_fast_paths.py  test_online_monitor.py  test_online_scheduler.py  test_ood_score_stage.py  test_periodic_utils.py  test_retrain_trigger.py  test_rolling_buffer.py  test_scheduler_status.py  test_slab_extractor.py
(+72 files in other folders)
