[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotspot-al"
version = "0.1.0"
description = "Atom-resolved, physics-aware hotspot active learning for Allegro-LAMMPS-CP2K reactive MLIP-MD."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PHAL contributors" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "ase>=3.22",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]
inference = [
  "torch>=2.0",
  "nequip>=0.6.0",
]
viz = [
  "matplotlib>=3.7",
  "pandas>=2.0",
]
io = [
  "h5py>=3.9",
  "tqdm>=4.66",
]
chem = [
  "pymatgen>=2024.0.0",
  "rdkit>=2024.0.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocstrings[python]>=0.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
timeout = 600
markers = [
  "integration: tests requiring external programs",
  "allegro: tests requiring real Allegro runtime",
  "lammps: tests requiring real LAMMPS executable",
  "cp2k: tests requiring real CP2K executable",
  "slow: slow tests",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hotspot_al"]

[tool.mypy]
python_version = "3.10"
files = ["src/hotspot_al"]
check_untyped_defs = true
ignore_missing_imports = true
no_site_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["src/hotspot_al"]
branch = true
omit = [
  "tests/*",
  "examples/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
